# olifm-rust

./: .gitignore  CNAME  Cargo.toml  README.md  build.sh  classes.css  directory_structure.json  index.html  index.js  olifm-helper
.github/workflows/: rust.yml
content/: readme.md
content/.obsidian/: workspace.json
content/blog/: 25-09-12 The lights are on.md  25-9-10 First.md  25-9-10 Testing.md  25-9-7 Second.md  readme.md
content/pictures/: 19-12-12 Gannet In flight 1.md  19-12-12 Gannet in flight 2.md  19-12-12 Mauriwai Beach.md  19-12-12 Muriwai Gannet Colony.md  19-12-14 Bee Photography!.md  19-12-14 More bees!.md  19-12-14 Wall of flowers.md  (+17 more)
content_service/: Cargo.toml
github/: Cargo.toml
js/: article-observer.js  index.js
pkg/: package.json  web.d.ts  web.js  web_bg.js  web_bg.wasm  web_bg.wasm.d.ts
shared/: Cargo.toml
src/: content.rs  lib.rs  main.rs  router.rs
web/: .htaccess  Cargo.toml  _headers  classes.css  directory_structure.json  index.html  index.js
web/content/: readme.md
web/content/.obsidian/: workspace.json
web/content/blog/: 25-9-10 Hello World!.md  readme.md
web/content/pictures/: 12-12-13 Nz Beach.md  19-12-12 Gannet Family.md  19-12-12 Muriwai Gannet Colony.md  19-12-13 Nz Beach.md  19-12-14 Ducks.md  21-5-25 Bluff Knoll.md
web/content/resume/: 2021-3-Employment-Monadel.md  2023-1-Project-User-Onboard.md  2024-1-Project-User-Management.md  2024-2-Employment-Dapth.md
web/content/sounds/: readme.md
web/js/: article-observer.js  index.js
web/src/: content.rs  image.rs  lib.rs  page.rs  router.rs
web/src/pages/: about_page.rs  home_page.rs  macros.rs  mod.rs  not_found_page.rs  page_about.rs  page_document.rs  page_home.rs  page_not_found.rs  page_pictures.rs  page_sounds.rs
web/web/content/blog/: 25-7-1 Last.md  25-9-7 Second.md
web/web/content/pictures/: 19-12-12 Muriwai Gannet Colony.md  20-02-01 Karri Valley Waterfall.md
(+28 files in other folders)
