[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "History",
  "Location",
  "PopStateEvent",
  "HashChangeEvent"
] }
wasm-bindgen-futures = "0.4.50"

[profile.release]
opt-level = "s"
