[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
github = { path = "../github" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "History",
  "Location",
  "PopStateEvent",
  "HashChangeEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Headers"
] }
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"

[profile.release]
opt-level = "s"
